Revert "Fix hero image cropping on widescreens"

--- a/style.css
+++ b/style.css
@@ -69,8 +69,7 @@ body {
 
 @media (orientation: landscape) {
   .hero-image {
-    object-fit: contain;
-    object-position: center;
+    object-position: center 50%;
   }
 }
 
